
2024-06-19  David Declerck <david.declerck@ocamlpro.com>

	* atlocal_win: fix path-related issues in Windows builds

2023-07-10  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal_win: updated to current atlocal.in
	* atlocal.in: include valgrind (memcheck, sgcheck) testing, enabled
	  by specifying VGSUFFIX in the environment
	* atlocal_valgrind: deleted
	* Makefile.am (dist): distributing valgrind.supp (for use in the testsuite)
	* Makefile.am (clean): clean folders created while running the testsuite
	  though various tools

2023-07-04  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>

	* atlocal.in: add variables LISTING_FLAGS, COMPILE_LISTING and
	  COMPILE_LISTING0 to use new flags -fno-ttimestamp and -fttitle
	  to remove the need for UNIFY_LISTING in listings.at

2023-04-05  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal.in: to allow running some test parts thousands of time for 
	  performance checks without burning energy on every build, add define
	  "CHECK-PERF" if one of PERFSUFFIX or CGSUFFIX are set,
	  or if --enable-debug was specified during configure
	* testsuite.src: adjusted several tests to use that option

2024-02-26  Boris Eng <boris.eng@ocamlpro.com>

	* testsuite.at: added a new test suite to test the backward compatibility
	  of strings functions (INSPECT, STRING, UNSTRING)

2023-02-21  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>

	* testsuite.src/syn_literals.at: move syntax checks on literals
	  from syn_misc.at to a new file syn_literals.at

2023-02-06  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal.in, atlocal_valgrind, atlocal_win: do not unset OS
	  as this is an external var we need to keep for win32
	* atlocal_valgrind, atlocal_win: added notes for things we
	  explicit don't want to do
	* testsuite.src/run_file.at: skip OS recognition on cygwin
	* testsuite.src/run_misc.at: fix linking/dlopen issue happening
	  on some systems (mostly win32) in test CALL RETURNING POINTER
