@@ -4297,7 +4297,7 @@ fexists_signed (char *fid, char *signature, int signature_size)
 					res = 0;
 				}
 		}
-		free (bfr);
+		cob_free (bfr);
 	}
 	return res;
 }
@@ -9040,6 +9040,7 @@ doOpenFile(
    printf("EXFTH did %s; Status=%c%c; File now %s\n",
        opmsg, fcd->fileStatus[0], fcd->fileStatus[1],
        (fcd->openMode & OPEN_NOT_OPEN) ? "Closed" : "Open");
+   fflush(stdout);
    return sts;
 }
 
@@ -9094,6 +9095,7 @@ TSTFH (unsigned char *opCodep, FCD3 *fcd)
    sts = EXTFH(opCodep, fcd);
    printf("EXFTH did %s; Status=%c%c\n", txtOpCode(opCode),
        fcd->fileStatus[0], fcd->fileStatus[1]);
+   fflush(stdout);
    return sts;
 }
 
